# star_ecom

./: README.md  package-lock.json  package.json  pyproject.toml
star_ecom/: api.py  hooks.py
star_ecom/fixtures/: product.json
star_ecom/star_ecom/doctype/order/: order.js  order.json  order.py  test_order.py
star_ecom/star_ecom/doctype/order_item/: order_item.json  order_item.py
star_ecom/star_ecom/doctype/product/: product.js  product.json  product.py  test_product.py
star_ecom/star_ecom/doctype/product_image/: product_image.json  product_image.py
store/: package-lock.json  package.json  vite.config.js
store/src/: App.vue  main.js  router.js  utils.js
store/src/components/: NavBar.vue  ProductCard.vue
store/src/pages/: Checkout.vue  Home.vue  ProductDetails.vue  Products.vue
